# tests-automation

./: .env  .env.example  .gitignore  CHANGES_SUMMARY.md  HOWTO.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  benchmark_results.db  cli.py  pyproject.toml  requirements.txt  test_implementation.py
api/: __init__.py  main.py
api/config/: settings.py
api/endpoints/: __init__.py  boms.py  environments.py  health.py  results.py  test_runs.py  test_types.py  upload.py
api/services/: __init__.py  database.py  validation.py
benchmark-analyzer/: .gitignore  README.md  requirements.txt
benchmark-analyzer/artifacts/: environment.yaml  test_results.yaml
benchmark-analyzer/schemas/: cpu_memory_benchmark_schema.json
benchmark-analyzer/src/: cli.py
benchmark-analyzer/src/dashboard/: main.py  queries.py
benchmark-analyzer/src/database/: dynamic_schema.py
benchmark-analyzer/src/schemas/: __init__.py  cpu_memory_benchmark_schema.py  storage_schema.py
benchmark-analyzer/src/utils/: validation.py
benchmark_analyzer/: __init__.py  config.py
benchmark_analyzer/cli/: main.py
benchmark_analyzer/contracts/: environment_schema.json
benchmark_analyzer/contracts/environments/: env1.yaml  env2.yaml
benchmark_analyzer/contracts/environments/dev/: environment.yaml
benchmark_analyzer/contracts/tests/cpu_latency/: bom.yaml  schema.json
benchmark_analyzer/contracts/tests/cpu_mem/: schema.json
benchmark_analyzer/contracts/tests/memory_bandwidth/: bom.yaml  schema.json
benchmark_analyzer/contracts/tests/network/: bom_schema.json  schema.json
benchmark_analyzer/contracts/tests/network_perf/: bom_schema.json  schema.json
benchmark_analyzer/core/: api_client.py  api_loader.py  criteria.py  loader.py  parser.py  validator.py
benchmark_analyzer/dashboards/: streamlit_app.py
benchmark_analyzer/db/: connector.py  models.py
benchmark_analyzer/test_data/: cpu_latency_results.json  memory_bandwidth_results.csv
benchmark_analyzer/tests/: test_parser.py  test_validator.py
cli/src/: main.py
contracts/environments/: schema.json
contracts/tests/cpu_mem_benchmark/: bom.yaml  bom_schema.json  results.yaml
docs/: CLI_API_ARCHITECTURE.md  CONTRIBUTING.md  DATABASE_ERD.md  DER.md  ERD_CURRENT.puml  ERD_SIMPLIFIED.puml  PROMPT.md  README.md  WORKFLOW.md  architecture.excalidraw  benchmark_analyzer_sequence.puml  bom_relationships.puml  components.puml  database_design.md  der.marmaid  der.puml  diagram.excalidraw  matrix.md  scaffold_der.excalidraw  schemas.sql
docs/1/: README.md
docs/2/: README.md  test_developer.puml
docs/diagrams/: README.md  test_operator.puml
docs/guides/: NETWORK_PERF_IMPLEMENTATION.md  README.md
docs/prompts/: CLI_PROMPT.md  CORE.md  DEVELOPMENT.md  FIX_BOM.md  OPERATOR.md
examples/: create_network_test_zip.sh  import_all_examples.sh
examples/boms/: cloud-instance.yaml  network-server.yaml  standard-server.yaml
examples/environments/: aws-c5-4xlarge.yaml  lab-server-01.yaml  lab-server-network.yaml  network-lab.yaml
examples/test_results/: NETWORK_PERFORMANCE_README.md
examples/test_results/aws_run_001/: cpu_mem_results.json
examples/test_results/lab_run_001/: cpu_mem_results.json
examples/test_results/network_lab_run_001/: network_perf_results.json
examples/test_results/network_run_001/: network_results.csv
infrastructure/: Dockerfile.api  docker-compose.yml  entrypoint.sh
poc/: Makefile
results/: raw.csv
tests/: __init__.py  conftest.py
tests/integration/api/: test_api_integration.py
tests/unit/: test_config.py
tests/unit/api/: test_test_types.py
